MFH: Fixed bug #29606 (php_strip_whitespace() prints to stdout rather then returning the value).